--- a/chapter02.ipynb
+++ b/chapter02.ipynb
@@ -18,7 +18,7 @@
     "다수의 신호를 입력으로 받아 하나의 신호를 출력한다.\n",
     "이 때, 신호는 흐른다(1)/안 흐른다(0)의 두 가지 값 중 하나만 가진다.\n",
     "\n",
-    "![입력이 2개인 퍼셉트론](%ED%8D%BC%EC%85%89%ED%8A%B8%EB%A1%A0.png)\n",
+    "![입력이 2개인 퍼셉트론](./그림자료들/%ED%8D%BC%EC%85%89%ED%8A%B8%EB%A1%A0.png)\n",
     "\n",
     "그림은 입력으로 2개의 신호를 받은 퍼셉트론의 예이다.\n",
     "x1, x2는 입력신호, y는 출력신호, w1, w2는 가중치이다.\n",
@@ -28,7 +28,7 @@
     "\n",
     "이상을 수식으로 나타내면 다음과 같다.\n",
     "\n",
-    "![퍼셉트론 수식](퍼셉트론수식.png)\n",
+    "![퍼셉트론 수식](./그림자료들/퍼셉트론수식.png)\n",
     "\n",
     "퍼셉트론은 복수의 입력 신호 각각에 고유한 가중치를 부여한다.\n",
     "가중치는 각 신호가 결과에 주는 영향력을 조절하는 요소로 작용한다.\n",
@@ -46,7 +46,7 @@
     "입력이 모두 1일 때만 1을 출력하고, 그 외에는 0을 출력한다.\n",
     "다음은 AND 게이트의 진리표다.\n",
     "\n",
-    "![AND 게이트의 진리표](andgate.png)\n",
+    "![AND 게이트의 진리표](그림자료들/andgate.png)\n",
     "\n",
     "이 AND 게이트를 퍼셉트론으로 표현하고자 한다면, 이 진리표대로 작동하는 w1, w2, θ 값을 정하면 된다.\n",
     "(w1, w2, θ)의 예시: (0.5, 0.5, 0.7), (0.5, 0.5, 0.8), (1.0, 1.0, 1.0)\n",
@@ -56,7 +56,7 @@
     "x1, x2가 모두 1일 때만 0을 출력하고, 그 외에는 1을 출력한다.\n",
     "다음은 NAND 게이트의 진리표다.\n",
     "\n",
-    "![NAND 게이트의 진리표](nandgate.png)\n",
+    "![NAND 게이트의 진리표](그림자료들/nandgate.png)\n",
     "\n",
     "NAND 게이트를 표현하는 (w1, w2, θ)의 예시: (-0.5, -0.5, -0.7)\n",
     "이 외에도 AND  게이트를 구현하는 매개변수의 부호를 모두 반전한 것 등이 있다.\n",
@@ -64,7 +64,7 @@
     "(3) OR 게이트\n",
     "OR 게이트는 입력 신호 중 하나 이상이 1이면 출력이 1이 되는 논리 회로이다.\n",
     "OR 게이트의 진리표는 다음과 같다.\n",
-    "![OR 게이트의 진리표](orgate.png)"
+    "![OR 게이트의 진리표](그림자료들/orgate.png)"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
     "\n",
     "θ를 -b로 치환하면 퍼셉트론의 동작이 다음과 같이 변환된다.\n",
     "\n",
-    "![퍼셉트론 수식2](퍼셉트론수식2.png)\n",
+    "![퍼셉트론 수식2](그림자료들/퍼셉트론수식2.png)\n",
     "\n",
     "여기서 b를 편향이라 하며, w1과 w2는 여전히 가중치이다.\n",
     "이 관점에서 보면, 퍼셉트론은 입력신호에 가중치를 곱한 값과 편향을 합하여, 그 값이 0을 넘으면 1을 출력하고 그렇지 않으면 0을 출력한다."
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "array([0. , 0.5])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "0.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "-0.19999999999999996"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
     "\n",
     "x1과 x2 중 한쪽이 1일 때만 1을 출력한다.\n",
     "\n",
-    "![XOR 게이트의 진리표](xorgate.png)\n",
+    "![XOR 게이트의 진리표](그림자료들/xorgate.png)\n",
     "\n",
     "지금까지 본 퍼셉트론으로는 이 XOR 게이트를 구현할 수 없다.\n",
     "\n",
@@ -339,8 +339,8 @@
     "\n",
     "이때의 퍼셉트론은 다음의 식으로 표현될 수 있으며, 그래프로 표현하면 그 옆의 그래프와 같다.\n",
     "\n",
-    "![OR 게이트 식](orgate2.png)\n",
-    "![OR 게이트 그래프](orgate3.png)\n",
+    "![OR 게이트 식](그림자료들/orgate2.png)\n",
+    "![OR 게이트 그래프](그림자료들/orgate3.png)\n",
     "\n",
     "회색 영역은 0을 출력하는 영역이며, 전체 영역은 OR 게이트의 성질을 만족한다.\n",
     "\n",
@@ -354,13 +354,13 @@
     "\n",
     "XOR 게이트의 동그라미와 세모 분포가 다음과 같기 때문이다.\n",
     "\n",
-    "![XOR 게이트 그래프](xorgate2.png)\n",
+    "![XOR 게이트 그래프](그림자료들/xorgate2.png)\n",
     "\n",
     "(2) 선형과 비선형\n",
     "\n",
     "직선이 아닌 곡선이라면 다음과 같이 구현 가능해 진다.\n",
     "\n",
-    "![XOR 게이트 그래프2](xorgate3.png)\n",
+    "![XOR 게이트 그래프2](그림자료들/xorgate3.png)\n",
     "\n",
     "**퍼셉트론은 직선 하나로 나눈 영역만 표현할 수 있다는 한계가 있다.**\n",
     "\n",
@@ -383,8 +383,8 @@
     "\n",
     "앞서 만든 AND, NAND, OR 게이트를 조합하면 XOR 게이트를 만드는 것이 가능하다.\n",
     "\n",
-    "![AND, NAND, OR 게이트 기호](기호.jpg)\n",
-    "![XOR 게이트](xorgate4.png)\n",
+    "![AND, NAND, OR 게이트 기호](그림자료들/기호.jpg)\n",
+    "![XOR 게이트](그림자료들/xorgate4.png)\n",
     "\n",
     "왼편 그림은 게이트들의 기호 도식화이고, 오른편 그림은 도식을 활용해 표현한 XOR 게이트다.\n",
     "\n",
@@ -394,7 +394,7 @@
     "\n",
     "NAND의 출력을 s1, OR의 출력을 s2로 해서 진리표를 만들면 다음과 같다.\n",
     "\n",
-    "![XOR 게이트 진리표](xor진리표.png)\n",
+    "![XOR 게이트 진리표](그림자료들/xor진리표.png)\n",
     "\n",
     "x1, x2, y에 주목하면 진리표가 참임을 알 수 있다."
    ]
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
    "source": [
     "지금 구현한 XOR을 뉴런을 이용한 퍼셉트론으로 표현하면 다음과 같다.\n",
     "\n",
-    "![XOR 퍼셉트론](xor퍼셉트론.png)\n",
+    "![XOR 퍼셉트론](그림자료들/xor퍼셉트론.png)\n",
     "\n",
     "이처럼 XOR은 다층 구조의 네트워크이다.\n",
     "\n",
